# LiveMediaExt

./: .gitignore  .gitmodules  CopyDependencies.bat  README.md
include/LiveMediaExt/: LiveAACSubsession.h  LiveAMRAudioDeviceSource.h  LiveAMRAudioRTPSink.h  LiveAMRSubsession.h  LiveDeviceSource.h  LiveH264Subsession.h  LiveH264VideoDeviceSource.h  LiveMediaSubsession.h  LiveMediaSubsessionFactory.h  LiveRtspServer.h  LiveSourceTaskScheduler.h  LiveSourceTaskScheduler0.h
include/Media/: AudioChannelDescriptor.h  ChannelManager.h  FrameGrabber.h  IRateAdaptation.h  IRateAdaptationFactory.h  IRateController.h  MediaChannel.h  MediaSample.h  MediaSampleStorageBuffer.h  MediaTypes.h  MultiMediaSampleBuffer.h  MultiplexedMediaHeader.h  PacketManagerMediaChannel.h  RtpTransmissionStats.h  RtspService.h  SimpleFrameGrabber.h  SingleChannelManager.h  SingleMediaSampleBuffer.h  SwitchController.h  VideoChannelDescriptor.h  VirtualMediaSource.h
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/LiveSourceMediaStreamer/: CMakeLists.txt  VersionInfo.h  main.cpp  stdafx.h
src/lib/: CMakeLists.txt  LiveAACSubsession.cpp  LiveAMRAudioDeviceSource.cpp  LiveAMRAudioRTPSink.cpp  LiveAMRSubsession.cpp  LiveDeviceSource.cpp  LiveH264Subsession.cpp  LiveH264VideoDeviceSource.cpp  LiveMediaExtPch.cpp  LiveMediaExtPch.h  LiveMediaSubsession.cpp  LiveRtspServer.cpp  LiveSourceTaskScheduler.cpp  LiveSourceTaskScheduler0.cpp  MediaTypes.cpp  PacketManagerMediaChannel.cpp  RtpTransmissionStats.cpp  RtspService.cpp  VirtualMediaSource.cpp
src/libs/: CMakeLists.txt
src/libs/SimpleRateAdaptation/: CMakeLists.txt  SimpleRateAdaptation.cpp  SimpleRateAdaptation.h  SimpleRateAdaptationFactory.cpp  SimpleRateAdaptationFactory.h  SimpleRateAdaptationPch.cpp
src/test/: CMakeLists.txt
src/test/unittests/: CMakeLists.txt  main.cpp
